# PugVDP

./: .gitignore  README.md
media/: AppleIILogo.xcf  DemonsCrest.xcf  DemonsCrest_Hicolor.xcf  advwars.xcf  advwars2.xcf  appleiigs_wiki_dither.xcf  bw_kanagawa_dither.xcf  headroom.xcf  ironman.xcf  ironman_comic.xcf  kanagawa.xcf  persia.xcf  pug_hist.xcf  som.xcf  ssfight2.xcf  starkhand.xcf  starry.xcf  torii.xcf  woodstock.xcf
src/: CMakeLists.txt
src/MC6809_demo/: BIOS_FUNC_TAB.D  CLEAN.BAT  COMPILE.BAT  DEFINES.D  PUGVDP_DEMO.ASM  PUGVDP_DEMO.LST  PUGVDP_DEMO.S19
src/include/: common_dvi_pin_configs.h
src/pugvdp/: CMakeLists.txt  bus_interface.pio  commands.c  commands.h  defines.h  fonts.h  helpers.c  helpers.h  main.c  mode_bitmap.c  mode_bitmap.h  mode_text.c  mode_text.h
util/conv/: conv.py
util/glyph_art/: glyph_art.cbp  glyph_art.depend  glyph_art.layout  main.c
util/glyph_art/fonts/: backup_half_8x4.xcf
util/glyph_art/util/: arena.py  convimg.py  makefonts.py  show_glyphart.py
util/tiles/: main.c  tiles.depend  tiles.layout
util/tiles/util/: convimg.py  show_tilemap.py
